err/spruce-settings.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MultiMap-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/Spruce_collections-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/Spruce_exc-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Spruce_lang-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Spruce_settings-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/Spruce_types-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/oset'...
Listing './lib/python3.5/site-packages/oset-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spruce'...
Listing './lib/python3.5/site-packages/spruce/collections'...
Listing './lib/python3.5/site-packages/spruce/collections/_mappings'...
Listing './lib/python3.5/site-packages/spruce/collections/_sequences'...
Listing './lib/python3.5/site-packages/spruce/collections/_sets'...
Listing './lib/python3.5/site-packages/spruce/exc'...
Listing './lib/python3.5/site-packages/spruce/lang'...
Listing './lib/python3.5/site-packages/spruce/settings'...
Listing './lib/python3.5/site-packages/spruce/types'...
Listing './lib/python3.5/site-packages/spruce/types/_converters'...
Compiling './lib/python3.5/site-packages/spruce/types/_converters/_core.py'...
***   File "./lib/python3.5/site-packages/spruce/types/_converters/_core.py", line 173
    raise exc, None, _sys.exc_info()[2]
             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
